<?xml version="1.0"?>
<package format="3">
  <name>h264_video_encoder</name>
  <version>2.0.0</version>
  <description>ROS2 H264 encoder node</description>
  <url>http://wiki.ros.org/h264_video_encoder</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>LGPLv2.1</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>h264_encoder_core</build_depend>
  <build_depend>aws_ros2_common</build_depend>
  <build_depend>aws_common</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rmw_implementation</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kinesis_video_msgs</build_depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>aws_ros2_common</exec_depend>
  <exec_depend>aws_common</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>kinesis_video_msgs</exec_depend>
  <exec_depend>rmw_implementation</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
