<?xml version="1.0"?>
<package format="2">
  <name>kinesis_video_msgs</name>
  <version>2.0.2</version>
  <description>Messages for transmitting video frames to Kinesis Video Streams</description>
  <url>http://wiki.ros.org/kinesis_video_msgs</url>

  <author email="ros-contributions@amazon.com">AWS RoboMaker</author>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>

  <license>Apache 2.0</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>diagnostic_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
